syntax = "proto3";

package ocf.cloud.cqrs.eventbus;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option go_package = "github.com/plgd-dev/cqrs/protobuf/eventbus;eventbus";


message Event {
    uint64 version = 1;
    string event_type = 2;
    string group_id = 3;
    string aggregate_id = 4;
    bytes data = 5;
}